--- a/client/components/banner/style.scss
+++ b/client/components/banner/style.scss
@@ -1,114 +1,29 @@
-.banner__content {
-	align-items: center;
-	display: flex;
-	flex-grow: 1;
-}
-
-.banner__icon,
-.banner__icon-circle {
-	border-radius: 50%;
-	flex-shrink: 0;
-	height: 24px;
-	margin-right: 16px;
-	text-align: center;
-	width: 24px;
-}
-
-.banner__icon {
-	color: $alert-yellow;
-}
-
-.banner__icon-circle {
-	align-self: center;
-	background-color: $alert-yellow;
-	color: white;
-}
-
-.banner__info {
-	flex-grow: 1;
-	line-height: 1.4;
-}
-
-.banner__title {
-	color: $gray-dark;
-	font-size: 14px;
-	font-weight: 500;
-}
-
-.banner__description {
-	color: $gray-dark;
-	font-size: 12px;
-	margin-top: 3px;
+@mixin banner-color( $color ) {
+	border-left-color: $color;
+	.banner__icon {
+		color: $color;
+	}
+	.banner__icon-circle {
+		background-color: $color;
+	}
 }
 
 .banner.card {
-	border-left: 3px solid $alert-yellow;
+	border-left: 3px solid;
 	display: flex;
 	padding: 12px 6px 12px 12px;
 
-	.banner__content {
-		flex-wrap: wrap;
+
+	@include banner-color( $blue-wordpress );
+
+	&.is-upgrade-personal {
+		@include banner-color( $alert-yellow );
 	}
-
-	.banner__icons {
-		display: flex;
+	&.is-upgrade-premium {
+		@include banner-color( $alert-green );
 	}
-
-	.banner__icon-plan {
-		display: flex;
-		margin-right: 16px;
-
-		.plan-icon {
-			height: 32px;
-			width: 32px;
-		}
-	}
-
-	.banner__icon,
-	.banner__icon-circle {
-		margin-top: -2px;
-		top: 4px;
-	}
-
-	.banner__icon {
-		display: block;
-	}
-
-	.banner__icon-circle {
-		display: none;
-		padding: 4px;
-	}
-
-	.banner__info {
-		width: 100%;
-	}
-
-	.banner__list {
-		color: $gray-dark;
-		font-size: 12px;
-		list-style: none;
-		margin: 0;
-
-		li {
-			margin: 6px 0;
-
-			.gridicon {
-				color: $gray;
-			}
-		}
-
-		.gridicon {
-			display: none;
-		}
-	}
-
-	.banner__action {
-		align-self: center;
-		color: $blue-wordpress;
-		font-size: 12px;
-		margin-top: 8px;
-		text-align: right;
-		text-transform: uppercase;
+	&.is-upgrade-business {
+		@include banner-color( $alert-purple );
 	}
 
 	.card__link-indicator {
@@ -119,11 +34,9 @@
 
 	&:hover {
 		transition: all 100ms ease-in-out;
-
 		&.is-card-link {
 			box-shadow: 0 0 0 1px $gray, 0 2px 4px lighten( $gray, 20% );
 		}
-
 		.card__link-indicator {
 			color: $blue-dark;
 		}
@@ -131,45 +44,125 @@
 
 	@include breakpoint( ">480px" ) {
 		padding: 12px 16px;
+	}
+}
 
-		.banner__content {
-			flex-wrap: nowrap;
-		}
+.banner__icons {
+	display: flex;
 
-		.banner__icons,
-		.banner__icon-plan {
-			align-items: center;
-		}
+	.banner__icon,
+	.banner__icon-circle {
+		border-radius: 50%;
+		flex-shrink: 0;
+		height: 24px;
+		margin-right: 16px;
+		margin-top: -2px;
+		text-align: center;
+		top: 4px;
+		width: 24px;
+	}
+
+	.banner__icon {
+		align-self: center;
+		color: $white;
+		display: block;
+	}
+
+	.banner__icon-circle {
+		color: white;
+		display: none;
+		padding: 4px;
+	}
+
+	@include breakpoint( ">480px" ) {
+		align-items: center;
 
 		.banner__icon {
 			display: none;
 		}
-
 		.banner__icon-circle {
 			display: block;
 		}
+	}
+}
 
-		.banner__info {
-			width: auto;
-		}
+.banner__icon-plan {
+	display: flex;
+	margin-right: 16px;
 
-		.banner__list {
+	.plan-icon {
+		height: 32px;
+		width: 32px;
+	}
+
+	@include breakpoint( ">480px" ) {
+		align-items: center;
+	}
+}
+
+.banner__content {
+	align-items: center;
+	display: flex;
+	flex-grow: 1;
+	flex-wrap: wrap;
+
+	@include breakpoint( ">480px" ) {
+		flex-wrap: nowrap;
+	}
+}
+
+.banner__info {
+	flex-grow: 1;
+	line-height: 1.4;
+	width: 100%;
+
+	.banner__title,
+	.banner__description,
+	.banner__list {
+		color: $gray-dark;
+	}
+
+	.banner__title {
+		font-size: 14px;
+		font-weight: 500;
+	}
+
+	.banner__description {
+		font-size: 12px;
+		margin-top: 3px;
+	}
+
+	.banner__list {
+		font-size: 12px;
+		list-style: none;
+		margin: 0;
+		li {
+			margin: 6px 0;
 			.gridicon {
-				display: inline;
-				margin-right: 12px;
-				vertical-align: bottom;
+				color: $gray;
+				display: none;
 			}
-		}
-
-		.banner__action {
-			margin: 0 -6px 0 8px;
 		}
 	}
 
-	&.has-call-to-action {
-		.banner__action {
-			margin-left: 0;
-			margin-right: 0;
+	@include breakpoint( ">480px" ) {
+		width: auto;
+
+		.banner__list li .gridicon {
+			display: inline;
+			margin-right: 12px;
+			vertical-align: bottom;
 		}
+	}
+}
+
+.banner__action {
+	align-self: center;
+	font-size: 12px;
+	margin: 8px 0 0 0;
+	text-align: center;
+
+	@include breakpoint( ">480px" ) {
+		margin: 0 -6px 0 8px;
 	}
 }
